RESOLVED FIXED309476
[Site Isolation] Fix WKNavigation.Frames
https://bugs.webkit.org/show_bug.cgi?id=309476
Summary [Site Isolation] Fix WKNavigation.Frames
Sihui Liu
Reported 2026-03-08 22:11:07 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-08 22:12:10 PDT
Sihui Liu
Comment 2 2026-03-08 22:51:06 PDT
EWS
Comment 3 2026-03-09 16:00:21 PDT
Committed 308944@main (85a40761dd65): <https://commits.webkit.org/308944@main> Reviewed commits have been landed. Closing PR #60179 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.